<resources>

    <string name="app_name">Practica Magic</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="notifications">Notificacions</string>
    <string name="profile">Profile</string>
    <string name="shop">Shop</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_pass">User/Pass</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="gmail">Gmail</string>
    <string name="Repeat_password">Password confirm</string>
    <string name="register_form">Registro new usario</string>
    <string name="back">Back</string>
    <string name="remember_password">Remember password</string>
    <string name="users">Users</string>
    <string name="events">Events</string>
    <string name="orders">Orders</string>
    <string name="cards">Cards</string>
    <string name="logout">Logout</string>
</resources>